# drugbank-importer

./: .markdownlint.json  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
mkdocs/: licenses.md
src/drugbank_importer/: drugbank_importer.py  models.py
tests/: .gitignore  test_csv.py  test_db.py
tests/csv/long/: drug2carrier.csv  drug2enzyme.csv  drug2target.csv  drug2transporter.csv  drugs.csv  partner_protein.csv
tests/csv/short/: description.csv  drug2carrier.csv  drug2enzyme.csv  drug2target.csv  drug2transporter.csv  drugs.csv  partner_protein.csv
tests/db/: long.json  short.json
